# socialvibe-webapp

./: .gitignore  LICENSE  README.md  executor_prompt_push_to_github.md  executor_prompt_rebuild_ui_task3.md  executor_prompt_rebuild_ui_task4.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  wrangler.toml
System Promt Drafts/: v1
docs/: 00_product_description.md  04_contributors_and_personas.md  07_guardrails.md  13_planner_prompting_guidelines.md  ARCHITECTURE.md  BROWSER_TOOLS_GUIDE.md  DEVELOPMENT_GUARDRAILS.md  PLANNER_OPERATING_MANUAL.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  PROJECT_TODO.md  ROLES_AND_RESPONSIBILITIES.md  SYSTEM_PROMPT.md
executor_prompts/: executor_prompt_TODO-104_dashboard_header_margin.md
mihneas-mock/: App.jsx  TwitterEngagementDashboard.jsx  mockTwitterData.js
socialvibe-lib/: Cargo.toml  README.md
socialvibe-lib/src/: lib.rs
src/: app.css  app.d.ts
src/lib/: README.md  index.ts  os4web_lib_bg.wasm  package.json  stores.ts  types.ts
src/lib/components/: Comments.svelte  FilterDropdown.svelte  Post.svelte  PostFilter.svelte  PostInteractionButton.svelte  PostSkeleton.svelte
src/lib/socialvibe_lib/: os4web_lib.js  os4web_lib_bg.wasm.d.ts  package.json  socialvibe_lib.js  socialvibe_lib_bg.wasm  wasm_lib.js  wasm_lib_bg.wasm
src/lib/stores/: filterStore.ts  mockDataStore.ts  walletStore.ts
src/lib/style/: colors.ts
src/lib/types/: twitter.ts
src/lib/utils/: formatters.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/ui/: App.jsx
(+9 files in other folders)
